Bug 93284 - FILEOPEN: LibO crashes on loading .RTF
Summary: FILEOPEN: LibO crashes on loading .RTF
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.0.0.5 release
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:5.1.0 target:5.0.2
Keywords: regression
Depends on:
Blocks: RTF
  Show dependency treegraph
 
Reported: 2015-08-08 18:21 UTC by Frank Zimmerman
Modified: 2016-10-25 19:24 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Zipped RTF file. It crashes on load. (2.67 MB, application/x-zip-compressed)
2015-08-08 18:21 UTC, Frank Zimmerman
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Frank Zimmerman 2015-08-08 18:21:56 UTC
Created attachment 117773 [details]
Zipped RTF file. It crashes on load.

I have an older RTF document. It has quite a few diagrams in it, I think they were originally WMF format.

It crashes on load. I can load it in Microsoft Word 2007 without a problem.

I also have an older ODT document I created from the RTF. I can load it fine, but after editing a bit (like resizing diagrams, styling chapter headings) it crashes on save, and most of the changes are lost (even after recovery).
Comment 1 tommy27 2015-08-10 13:06:15 UTC
tested under Win8.1 x64

no crash with LibO 4.4.5.1

crash with LibO 5.1.0.0.alpha1+
Build ID: 62e2fae93e8894f73560a30ae1e752cbd4c001ad
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2015-07-29_04:40:44
Locale: it-IT (it_IT)

I get a LibO Fatal Error error window saying 
SEH Exception: ACCESS VIOLATION 

this is a 5.x regression

I add Miklos Vajna to CC list since he's the RTF expert here.
Comment 2 Miklos Vajna 2015-08-14 15:54:49 UTC
Hmm, can't reproduce on Linux, possibly Windows-specific.
Comment 3 Miklos Vajna 2015-08-14 20:31:13 UTC
bibisecting using git://gerrit.libreoffice.org/bibisect-win32-5.0.git:
libreoffice-5-0-branch-point is bad
libreoffice-4-4-branch-point is good
[da12357c491a0dce5acc0bd1f00c26f89d8f20e6] source c1b9402d49a7cd4bec383f28d397d9d89541f0e0 is good
[2783cac5d1f18f44ce31f52eb7ae2f0ea17d0c96] source 5d7a203bdae1940e4846c4c42f5d733e4ffa4160 is good
[c6b55917df3df447007dbb29dd84f24d1203cfb3] source 5b8acf459e4a6728ea656e7abd5dfb08ad2ae345 is bad
[f3cd4f9fed8d6054c5112732a412cce67ac90ce1] source 0bdb8eda1272596301391d9620ccec2866642975 is good
[9c89ac023456f41259dca96ecbee34d9c41dc11b] source a390d178b0440f5ecc151427c9d05f52c54e8c45 is good
[feaf5ecccd61a411c22c709cfc9e05e800a13679] source 433fb8c055ff93a9bb3567310d2dda6bbcc9d635 is bad
[3d8d4485fbca0b0e6c34a1ef1f67a9929d064b10] source 2b0be6c0e9d23f1b8535ba7033732ae2e3bfb5c9 is good
[338508085c04dea6581857f628b81f2f91cd10c9] source c446a09217670c025076cbc9135bcdb5d8e11757 is good
[9365d350c5cd23a54ab9157ca336ef8888b1e062] source 83ed85eceb3591a14a7f661c179d5b5880cedcff is bad
[6f61e8599fb446c632b500acb97575041cc3930d] source ec7f227f90fbdd0bd17c0b885a832e6408106deb is good
[2613be0a51a5cc6205f920105e8906bcfc6f38c5] source aef1826d9ca318a1359a2116e7f146e993413234 is bad
[235bd274423aea26d476f748d3ca238a13191b76] source a31991c4188e91326941fbe510ce70129d1ccde8 is good
[2a724ce8b94076777411d7d51fa3b8afd8ecef7c] source ce82146a6be87b239a0bde0b59fddf8865290b99 is bad
 2a724ce8b94076777411d7d51fa3b8afd8ecef7c in bibisect.git is the first bad -> ce82146a6be87b239a0bde0b59fddf8865290b99 in core.git 235bd274423aea26d476f748d3ca238a13191b76 in bibisect.git is the last good -> a31991c4188e91326941fbe510ce70129d1ccde8 in core.git
core.git range is a31991c4188e91326941fbe510ce70129d1ccde8..ce82146a6be87b239a0bde0b59fddf8865290b99, that's when the vclptr branch was merged to core.git, so not RTF specific.
Comment 4 Miklos Vajna 2015-08-15 11:09:01 UTC
The WMF filter leaks a number of virtual devices and Windows has a more strict limit on how many of those are OK to have in parallel, that's why the file can't be opened. I'll take care of this.
Comment 5 Commit Notification 2015-08-17 07:14:34 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=047ebb1dadcc0219a268455f74fc03a23aa3d86d

tdf#93284 vcl: fix VirtualDevice leaks in the WMF filter

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2015-08-18 09:25:01 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9dd9208d54d64eb53d95853af725712229d41fad&h=libreoffice-5-0

tdf#93284 vcl: fix VirtualDevice leaks in the WMF filter

It will be available in 5.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.