tdf#93284 vcl: fix VirtualDevice leaks in the WMF filter

We attempted to have 8884 VirtualDevices in parallel. This number is now
12 after fixing the leaks.

The original bugdoc has 135 images, 76 is enough to make Writer on
Windows crash. The minimized document has the same WMF data for all the
images, but still duplicated inside the ZIP container, so we trigger the
resource limit, but the document is still just 99K.

Change-Id: I4c6b3853eaf688302323daf67ff7b62dd64fc412
(cherry picked from commit 047ebb1dadcc0219a268455f74fc03a23aa3d86d)
Reviewed-on: https://gerrit.libreoffice.org/17825
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>